--- a/PlantManagement.csproj
+++ b/PlantManagement.csproj
@@ -58,11 +58,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controllers\BaoCaoController.cs" />
+    <Compile Include="Controllers\DonViHanhChinhController.cs" />
     <Compile Include="Controllers\RegisterController.cs">
       <Generator>MSBuild:Compile</Generator>
     </Compile>
-    <Compile Include="Images\Helpers\DatabaseHelper.cs" />
-    <Compile Include="Models\AuthController.cs" />
+    <Compile Include="Controllers\ResetPasswordController.cs" />
+    <Compile Include="Helpers\DatabaseHelper.cs" />
+    <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Models\Cap.cs" />
     <Compile Include="Models\CoSoBuonBan.cs" />
     <Compile Include="Models\CoSoSanXuat.cs" />
@@ -75,6 +78,7 @@
     <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\PhanBon.cs" />
     <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\SinhVatGayHai.cs" />
     <Compile Include="Models\SXTT.cs" />
     <Compile Include="Models\ThuocBVTV.cs" />
     <Compile Include="Models\User.cs" />
@@ -83,6 +87,9 @@
     <Compile Include="Models\VuonCayDauDong.cs" />
     <Compile Include="Views\BaoCaoView.xaml.cs">
       <DependentUpon>BaoCaoView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\DonViHanhChinhView.xaml.cs">
+      <DependentUpon>DonViHanhChinhView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\QuanLyDanhMucView.xaml.cs">
       <DependentUpon>QuanLyDanhMucView.xaml</DependentUpon>
@@ -111,7 +118,14 @@
     <Compile Include="Views\RegisterWindow.xaml.cs">
       <DependentUpon>RegisterWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ResetPasswordView.xaml.cs">
+      <DependentUpon>ResetPasswordView.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\BaoCaoView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\DonViHanhChinhView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -172,6 +186,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\ResetPasswordView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -203,8 +221,18 @@
     <Content Include=".gitignore">
       <Generator>MSBuild:Compile</Generator>
     </Content>
+    <Resource Include="Images\cropped-logo-vingarden-removebg-preview.png" />
+    <Resource Include="Images\istockphoto-1200064755-612x612-removebg-preview.png" />
+    <Resource Include="Images\8fe930e6-9048-47c8-b398-6fb9825796a4-removebg-preview.png" />
+    <Resource Include="Images\31c8f5c5-ab91-484b-9d7c-d28f05c1eb59-removebg-preview.png" />
+    <Resource Include="Images\e7b4e0df-bbe4-43b4-afdd-6ef572b538b5-removebg-preview.png" />
+    <Resource Include="Images\d33e7af2-d3ff-4313-a0b4-dd9ae9e9d7e7-removebg-preview.png" />
+    <Resource Include="Images\855d3b8c-a1f4-47c0-bd32-1390330186ed-removebg-preview.png" />
+    <Resource Include="Images\e5e2b72b-e0f0-4547-b973-33c8207b0d88-removebg-preview %281%29.png" />
+    <Resource Include="Images\9bfecbae-f085-4a77-b408-e0c68a3ac55c-removebg-preview %281%29.png" />
+    <Resource Include="Images\57866269-2bd8-4869-bf57-c06cafaf6df7-removebg-preview %281%29.png" />
+    <Resource Include="Images\pngtree-back-icon-arrow-photo-png-image_13614689-removebg-preview.png" />
     <Resource Include="Images\realmadrid.png" />
-    <Resource Include="Images\cropped-logo-vingarden.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
